# bachelor_project

./: .gitignore  Makefile  README.md  data.dvc  dnsmos_test_.csv  index.html  key.txt  pyproject.toml  requirements.txt  scores_90p.csv  si_snr_learning_curve.json  squim_mos_learning_curve.json  timbre_AudioSet.csv
.dvc/: config
data/test_noisy_raw/: Place data here.textClipping
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
gan/: __init__.py  plot_AS_bestworst.py  plot_supervised.py  predict_model.py  predict_model2.py  predict_model_as.py  predict_model_ft.py  predict_model_lc.py  remove_unpaired.py  sisdr_AS.py  sisdr_AS_fake.py  train_discriminator.py  train_generator.py  train_model.py  train_model_Fred.py
gan/config/: config.yaml
gan/data/: __init__.py  data_loader.py  make_dataset.py  make_dataset_AudioSet.py
gan/models/: DPRNN.py  __init__.py  autoencoder.py  autoencoder_dontuse.py  autoencoder_mix_data.py  autoencoder_noD.py  baseline.py  discriminator.py  generator.py  generator_repo.py  tests.py  wandbtest.py
gan/utils/: coverage.py  data_stats.py  pitch.py  plot_learning curve.py  plot_learning_curve.py  plot_learning_curve_finetune.py  plot_learning_curve_speakers.py  plot_lengths.py  plot_wandb_csv.py  plot_wandb_csv_append.py  plot_wandb_csv_overlay.py  plot_weight_norms.py  save_sampled_files.py  split_dataset_semi_supervised.py  utils.py
gan/visualizations/: visualize.py
reports/: d_fake.csv  d_loss.csv  d_penalty.csv  d_real.csv  g_adv.csv  g_fidelity.csv  g_loss.csv
(+194 files in other folders)
